# CSaP-Project

./: CMakeLists.txt  LICENSE.md  README.md  clean.sh  install.sh  maxlimit  testrun.sh
Client/: AdressBook  CLIENT  Makefile  audiotest.c  audioutil.c  client.c  config.txt  record.c  recorder.c  test  tools.c  util.h
Mds/: MDS  Makefile  Mds.c  config.txt  server  sserver.c  test  tools.c  usersList  util.h
Project structure/: CSAP PROJECT.xmind  CSaPProject.md  CSaPProject.xmind
VDR/: Makefile  VDR  VDR.c  sclient.c  tools.c  util.h
Vdr/: Makefile  VDR  VDR.c  config.txt
audio/: audio.h  audioutil.c  client.c  crash.c  paex_record.c  paex_record2.c  record.c  recorded.raw  test  util.h
lib/: recorder.c  tools.c  util.h
test file/audio/: audiotest.c  oldecord.c  test.c  util.h
trash and tests/: audiotest.c  sclient.c
